--- a/TRAD.html
+++ b/TRAD.html
@@ -1,4 +1,5 @@
 <head>
+	//Target Resolution Adaptive Delivery (TRAD) Client.
     <script type="text/javascript">
         function GetURL () {
             var embed = document.getElementById ("myEmbed");
